# pyLACEpostHoc

./: .gitignore  CITATION.cff  README.md  config.py  constants.py  deprecation.py  environment.yml  index_tools.py  local_paths.template.json  pylace.yaml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
data_base_analyser/: CounterCurrentAnalyser.py  __init__.py
data_handlers/: __init__.py  matLabResultLoader.py  mediaHandler.py  spike2SimpleIO.py
docs/: api.rst  conf.py  index.rst  overview.rst  pipeline.rst  quickstart.rst  requirements.txt
docs/_templates/autosummary/: module.rst
fish_data_base/: __init__.py  counterCurrentAna.py  fishDataBase.py  fishRecAnalysis.py  result_frames.py
other_fish_related_analysis/: LACEManuscriptCorr.py  __init__.py  cholesterolAna.py
plotting/: DaywiseAnalysis.py  __init__.py  cStartPlotter.py  fishPlot.py
run_scripts/: analyse_neededTrials_cStart.py  c_start_movies.py  correct_suf_ephys.py  fishExample.py  plot_c-start_exp.py  readMetaData.py  rei_ana.py  run_cruising_ana.py  run_curvature_ana.py  run_saccade_ana.py  run_spike2Scripts.py  run_sufge1_c-start_ana.py  test_CCAna.py  test_cruisingAna.py
tests/: test_coverage_extra.py  test_data_handlers.py  test_fish_data_base.py  test_foundations.py  test_index_tools.py  test_other_fish.py  test_plotting.py  test_trace_analysis.py
trace_analysis/: CurvatureAnalyser.py  SpikeDetector.py  __init__.py  speed_analyser.py  thrustAnalysis.py  traceAnalyser.py  traceCorrector.py
